--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -21,7 +21,9 @@ Go into the directory for the project you wish to change (e.g. openmoko-dialer3)
  $ bitbake -c clean openmoko-dialer3
  $ bitbake -c compile openmoko-dialer3
 
-If you are satisfied with your changes and want to create a new SHR image:
+There is no need to check-in the changes to the repo as the system now looks for SHR packages in the local filesystem. The problem is that it is necessary to '''always''' clean the packages so bitbake gets the new changes next time you compile.
+
+When your are satisfied with your changes and want to create a new SHR image:
 
  $ make image
 
