--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -6,8 +6,11 @@ There is a new (much simpler) way to build SHR that is under construction right 
 === First build ===
 
 * Download the FSO Makefile and common directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
-* Apply this patch
+* Apply this [[Media:fso-makefile.patch]].
 
+ $ patch -p0 < fso-makefile.patch
+
+* Then run:
  $ make setup
  $ cd shr-unstable
  $ make image
