*Empty MediaWiki Message*

--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -287,3 +287,5 @@ the webpages:
 -[http://buildhost.openmoko.org/daily/neo1973/deploy/glibc/images/neo1973/]
 -[http://buildhost.openmoko.org/daily/neo1973/200807/20080706/]
 doesn't exist anymore..
+
+ditto, still. can I just make all or sumpin and make it locally from source?
