--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -17,7 +17,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === Making changes ===
 
-Go into the directory for the project you wish to change (e.g. openmoko-dialer3) and make your changes.
+Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root directory), then under the top directory, run:
 
  $ cd shr-unstable
  $ . setup-env  (only once per session)
