/* Working SIM pics */

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -118,6 +118,8 @@ EVENT: Signal Quality: 31
 
 [[Image:Adam_20080713_working_back.JPG]]
 
+[[Image:KewlCat_20080829_Working_front.png]][[Image:Usim2.png]]
+
 == Not Working SIM pics ==
 * AT&T
 
