--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -15,6 +15,8 @@ There is a new (much simpler) way to build SHR that is under construction right 
  $ cd shr-unstable
  $ make image
 
+''make setup'' will download SHR in the ''shr'' directory (SHR Root directory from now on).
+
 === Making changes ===
 
 Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root directory), then under the top directory:
