--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -52,6 +52,8 @@ Please fill out following table .
 cme error: 313
  || 2G possibly 3g? ||  UK || no pics.. YET. || [[Special:Emailuser/tdobson|tdobson]] || other SIMs work - MTS(RU) Orange(UK) Vodafone(UK) || Prepaid. Feel free to contact me.
 |-
+| Orange || working || 3G "USIM" || FR || (see below) || KewlCat || Om2008.8-update (20080827) solved it || Pre-paid SIM
+|-
 |}
 
 == User Provided tested SIM pictures ==
