--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -17,6 +17,11 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 ''make setup'' will download SHR in the ''shr'' directory (SHR root directory from now on).
 
+Before ''make image'', you may want to update ''conf/local.conf'' (under ''shr-unstable'' in the top directory) to speed up the building process with:
+
+ PARALLEL_MAKE = "-j 4"
+ BB_NUMBER_THREADS = "4"
+
 === Making changes ===
 
 Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root directory), then under the top directory:
