*Empty MediaWiki Message*

--- a/Bug_Filing_Policy.mw
+++ b/Bug_Filing_Policy.mw
@@ -2,15 +2,15 @@
 
 == Less is more in a bug report (engineers are lazy) ==
 * What is your issue (what do you do, how does it fail)?
-* How to reproduce (what are the steps)?
+* How to reproduce it(what are the steps)?
 * What are you using (opkg list_installed, feed config, image)?
 * In case of kernel bugs attach the output of dmesg or in case of Qtopia/GSM the output of logread.
-* If logs exist and the issue is confirmed do not attach your log unless when asks for it.
-* A "me too" without log messages is noise and makes engineers not look at the issues.
-* Having many bugs is not an issue, so this is no excuse to file new bug reports.
+* If logs exist and the issue is confirmed do not attach your log unless when asked for it.
+* A "me too" without log messages is '''noise''' and makes engineers not look at the issue.
+* Having many bugs is not an issue, so this is no excuse to not file new bug reports.
 
 == Check for duplicates (but in doubt create a new ticket) ==
-Before filing a bug check if a bug describing your issue exists. If you don't find an exact match or not really sure file a new ticket. New tickets can be easily resolved as duplicate where comments to existing bugs with a different issue can not be removed. So a possible duplicate ticket is not too bad.
+Before filing a bug check if a bug describing your issue exists. If you don't find an exact match or are not really sure file a new ticket. New tickets can be easily resolved as duplicate where comments to existing bugs with a different issue can not be removed. So a possible duplicate ticket is to be preferred.
 
 * If you know you have this issue and no one else confirmed, attach your logs and feel free to say me too
 * If you know you have this issue and it is confirmed, add yourself to CC or monitor the bug
@@ -26,7 +26,7 @@ Before filing a bug check if a bug describing your issue exists. If you don't fi
 * If calls, parsing of SMS, or such things do not work. Attach the output of logread after this has happened.
 
 == Handling of kernel bugs ==
-* The installed version and the output of dmesg is most likely of interest
+* The installed version and the output of dmesg is most likely of interest, attach that
 
 == Creating a ticket ==
 * Do not set a Category/Component unless the holy penguin told you it is the correct one.
