*Empty MediaWiki Message*

--- a/Bug_Filing_Policy.mw
+++ b/Bug_Filing_Policy.mw
@@ -34,3 +34,9 @@ Before filing a bug check if a bug describing your issue exists. If you don't fi
 * Describe clearly what your issue is, if it makes sense attach a screenshot, don't be afraid to write more than five lines
 * See the first point on less is more.
 * If you did something like rm -rf / and now the PIN dialog does not come up because you have no userspace apps left then please tell us what you did and do not say "It does not ask for PIN anymore".
+
+== Ideal workflow ==
+* We gather information on the issue until we understand it
+* Engineers implement a fix (if fixable) and people can test through updated packages
+* With testing packages available we can put the bug into in_testing
+* Close once fixed, reopen once regressed.
