--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -46,7 +46,7 @@ Openmoko專案源起於社群，所有的人都可以加入，協助設計心目
 ==<font color=75d806>Openmoko 支援的硬體</font>==
  [[image:FIC-neo1973 small.jpg|100px|left|frontside]]
 
-來自 [[FIC]] 的 [[Neo1973]] 是搭載 Openmoko 的第一支手機，目前已銷售完畢 (Feb 11 2008)。您可以透過[https://direct.openmoko.com/ Openmoko網路商店]購買及找到銷售資訊。[[Neo FreeRunner/zh tw|Neo FreeRunner]]為下一代新手機，您可以在此頁面上找到最新的開發與更新資訊。若您想要加入我們的行列，購買新一代的商品，請把你的名字加到我們的[[Buying_Interest_List|Neo FreeRunner 購買名單]]中，方便接收後續銷售訊息。
+來自 [[FIC]] 的 [[Neo1973]] 是搭載 Openmoko 的第一支手機，目前已銷售完畢 (Feb 11 2008)。您可以透過[https://direct.openmoko.com/ Openmoko網路商店]購買及找到銷售資訊。[[Neo FreeRunner/zh tw|Neo FreeRunner]]為下一代新手機，您可以在此頁面上找到最新的開發與更新資訊。
 
 <div align=center>
 {| class="wikitable" cellspacing="4" cellpadding="4" width=80%
