/* Chip Scouting */  typo

--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -43,7 +43,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 
 '''Wireless Peripheral'''
 {|border=1 cellspacing=0
-! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
+! Chip/Module !!Freedom Requirements !! Business Requirements !! Technical Requirements !! Specs
 |-
 ||SIMCOM5210  || All docs can be opened under the letter of authorization Aug 13 ('''The letter is delivered on Aug 21''') || Teenie says it's OK. || Good (Shawn Aug.7.2008)||[http://www.sim.com/productssolutions/wirelessmodule/sim5210.htm]
 |-
