*Empty MediaWiki Message*

--- a/OpenEmbedded_Merge_Policy.mw
+++ b/OpenEmbedded_Merge_Policy.mw
@@ -21,3 +21,4 @@ The upgrade path is important to us. Make sure that version numbers do not jump 
 
 == Merge early and often ==
 With merging early and often (regularly like every week) the adjustments we have to make and test should be managable.
+[[category:Policy]]
