--- a/LM4853.mw
+++ b/LM4853.mw
@@ -6,6 +6,8 @@
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to this chip:
 ** [[Samsung S3C2442B B54]] GPIO: HP_IN, AMP_SHUT (shutdown); 
+*** GPJ1 == 0, headphone or speaker is enabled.  GPJ1 ==1, amp is off.
+*** GPJ2 == 0, select speaker; GPJ2 == 1, select headphones.
 ** Wolfson [[WM8753]]: LOUTL (LEFTIN), LOUTR (RIGHTIN); 
 ** speaker4102: (LEFTOUT/BLTOUT-, BLTOUT+);
 ** headset-jack: ring 2 (RIGHTOUT), ring 3 (LEFTOUT/BLTOUT-) via 1uF-33R each
