/* New way (using FSO Makefile) */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -17,7 +17,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 ''make setup'' will download SHR in the ''shr'' directory (SHR root directory from now on).
 
-== Set up your local.conf ==
+=== Set up your local.conf ===
 
 Before ''make image'', you might want to update ''conf/local.conf'' (under ''shr-unstable'' in the top directory) to speed up the building process with:
 
