removed 1973 specific, expanded a little, added link to planned page "Specialized USB cables"

--- a/USB.mw
+++ b/USB.mw
@@ -6,10 +6,11 @@ In Openmoko and the [[Neo1973]], the following USB techniques are working, or ar
 * [[USB DFU]] firmware uploads during [[u-boot]]
 * [[USB CDC ACM]] serial terminal for use during [[u-boot]]
 * [[USB Networking]] when booted to Linux
-* [[Neo1973 Battery Charger]]
-* [[Neo1973 USB host]]
+* [[Battery Charger]]
+* [[USB host]]
+* [[Specialized USB cables]]
 
-Neo1973 has a standard mini-USB type-B (slave) socket and ships with a cable to connect it to a host computer.
+Both the Neo 1973 and the Neo FreeRunner have a standard 5-pin mini-USB type-B (slave) socket and ship with a cable to connect it to a host computer. The Neo FreeRunner additionally ships with a charger that connects via this port.
 
 == See also ==
 
