--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -78,7 +78,7 @@ IMPORTANT: '''Make sure that the battery never discharges completely'''. This is
 * Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
 
-[[Neo_FreeRunner_(GTA02)_Battery]]
+[[Neo_FreeRunner_Battery]]
 
 ===Buttons and connectors===
 
