--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -31,11 +31,11 @@ Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root direct
  $ cd shr-unstable
  $ . setup-env  (only once per session)
  $ bitbake -c clean openmoko-dialer3
- $ bitbake -c compile openmoko-dialer3
+ $ bitbake -c build openmoko-dialer3
 
-There is no need to check-in the changes to the repo as the system now looks for SHR packages in the local filesystem. The problem is that it is necessary to '''always''' clean the packages so bitbake gets the new changes next time you compile.
+There is no need to check-in the changes to the repo as the system now looks for SHR packages in the local filesystem. The problem is that it is necessary to '''always''' clean the packages so bitbake gets the new changes next time you compile. Also, note that we are using ''bitbake -c build'', this is because bitbake needs to do all the necessary steps before compiling (i.e. fetch, unpack, configure...).
 
-When your are satisfied with your changes and want to create a new SHR image:
+When you are satisfied with your changes and want to create a new SHR image:
 
  $ make image
 
