--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -33,7 +33,9 @@ Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root direct
  $ bitbake -c clean openmoko-dialer3
  $ bitbake -c build openmoko-dialer3
 
-There is no need to check-in the changes to the repo as the system now looks for SHR packages in the local filesystem. The problem is that it is necessary to '''always''' clean the packages so bitbake gets the new changes next time you compile. Also, note that we are using ''bitbake -c build'', this is because bitbake needs to do all the necessary steps before compiling (i.e. fetch, unpack, configure...).
+There is no need to check-in the changes to the repo as the system now looks for SHR packages in the local filesystem. The problem is that it is necessary to '''always''' clean the packages so bitbake gets the new changes next time you compile.
+
+Also, note that we are using ''bitbake -c build'', this is because bitbake needs to do all the necessary steps before compiling (i.e. fetch, unpack, configure...).
 
 When you are satisfied with your changes and want to create a new SHR image:
 
