*Empty MediaWiki Message*

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -1,3 +1,5 @@
+{{note|work in progress}}
+
 === Modified USB cable to inject power while in host mode ===
 
 Three-headed cables are required if you want to power the FreeRunner / USB device whilst in host mode.  For many uses the FreeRunner provides sufficient power to make such a cable unnecessary. At the moment, you'll have to manufacture this one yourself. You need to make a cable with three ends:
