--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -29,9 +29,9 @@ This page provides information on the architecture of the second version of the 
 
 The [[Debug Board | debug board]] provides these key components.
 
-* [[Debug Board#USB Hub | USB Hub]]
-* [[Debug Board#JTAG using FT2232 | JTAG using FT2232]]
-* [[Debug Board#Serial Port | Serial Port]]
+* [[Debug Board v2#USB Hub | USB Hub]]
+* [[Debug Board v2#JTAG using FT2232 | JTAG using FT2232]]
+* [[Debug Board v2#Serial Port | Serial Port]]
 
 === Schematics ===
 
