--- a/Opkg.mw
+++ b/Opkg.mw
@@ -8,6 +8,8 @@ Source code is available in the subversion repository: http://svn.openmoko.org/t
 
 You can learn how to create own [http://handhelds.org/moin/moin.cgi/BuildingIpkgs Opkg packages] on the Ipkg site.
 
+Packages should install .desktops very much last. This ensures that icons are present when they are used by the .desktops. [https://docs.openmoko.org/trac/ticket/1524 Reference]
+
 == New Features ==
 
 This is a list of features that have been completed. Mostly this is a list of changes from Ipkg.
