*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -494,8 +494,17 @@ __NOTOC__
 *[[Neo FreeRunner (GTA02) FAQ]]
 *[[Getting Started FAQ]]
 *[[Distribution Customization FAQ]]
-* [[Application Development FAQ]]
+*[[Application Development FAQ]]
 
+==Policy==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
+<div align=left>
+*[[Bug Filing Policy]]
+*[[Policies]]
+
+</div>
 ==Mailing List==
 *[http://lists.openmoko.org/mailman/listinfo/ Mailing List]
 
