--- a/Development_Branches_Policy.mw
+++ b/Development_Branches_Policy.mw
@@ -61,7 +61,7 @@ Here is a little graph that can explain things. The horizontal axis represents t
 
 [[Image:Branches.png]]
 
-[[Category:Technical]]
-[[Category:Application Developer]]
+
+[[Category:Policy]]
 [[Category:System Developers]]
 [[Category:Documentation]]
