--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -72,7 +72,11 @@ TBD
 
 === How to change the dictionary used by the predictive keyboards ? ===
 
-TBD
+The dictionary for the "standard" (qtopia) predictive keyboard is stored in ''/opt/Qtopia/etc/dict/<LANG>/words.dawg''. To change it, compile with ''dawgen'' an ispell dictionary (list of words) and replace the en-US words file. You can find an x86 binary ''dawgen'' executable  [http://www.3v1n0.net/openmoko/qtopia-italian-keyboard.tar.bz2 here].
+
+For illume: TBD
+
+Matchbox has no predictive mode (to be confirmed ?).
 
 === How to toggle the predictive mode on and off ? ===
 
