--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -201,7 +201,7 @@ Completed tasks:
 |2008-07-08
 |-
 |Set up projects.openmoko.org project for the patch to apply to FSO to make it SHR
-|Done! [http://shr.projects.openmoko.org/ SHR Project HomePage]
+|Done! [http://projects.openmoko.org/projects/shr/ SHR Project HomePage]
 |2008-07-08
 |-
 |fork media player for SHR
