/* Charging the Neo FreeRunner */  note on best way to charge

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -71,9 +71,11 @@ Before using the Neo FreeRunner for the first time, you should charge the batter
 
 (Note 2: the provided charger includes three "national" plugs. The default is North America, with alternative U.K (3 square pins) and Euro (two round pins) adapters. To install the alternative power adapters, depress the latch in the cover (on the opposite side of the charger from the product information label) and slide the cover outward. Note that the two North American pins do not come out; the other adapters slide over them, and snap into place. The two-pin Euro adapter is removed in the same way as the cover. The three-pin U.K. adapter is removed by '''gently''' pressing the dummy ground pin (black) '''toward the end of the adapter with the cord''' and then sliding it off the adapter.)
 
+(Note 3: the most reliable way to charge the Neo Freerunner is to attach the original provided charger, let the device boot all the way to GUI, and disable suspend in powermanagement)
+
 Charging an empty battery at 100mA takes 12~15 hours, at 500mA takes 2,5~3,5 hours, and at 1000mA takes 1.5~2.5 hours. (90%~100%) [to be confirmed]
 
-IMPORTANT: '''Make sure that the battery never discharges completely'''. This is an issue because the internal charging circuitry can not be turned on until the FreeRunner has booted, and booting through USB power alone does not work. Should the battery become completely discharged, your options are:
+IMPORTANT: '''Make sure that the battery never discharges completely'''. This is an issue because the internal charging circuitry can not be turned on until the FreeRunner has booted, and booting through USB power alone does not work reliably. Should the battery become completely discharged, your options are:
 * Use external stand-alone charger (compatible with the Nokia BL-5C battery)
 * Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
