--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -32,6 +32,8 @@ If you use a card not listed here, please add to this table.
 |-
 | Kingston || SD-C02G || 2GB || ? || ? || {{yes}}  ||
 |-
+| Kingston || SDC4 (N0043-012.A00LF) || 4GB || ? || ? || ?  || FSO MS2 / Linux 2.6.24: I/O Errors while formatting
+|-
 | Patriot ||  PSF128MCSD-RC || 128MB || ? || {{no}} || ? ||
 |-
 | PNY || P-MICROSD512-BX || 512MB || || {{yes}} || {{yes}} || {{yes}}
