turning first heading into normal text

--- a/Bug_Filing_Policy.mw
+++ b/Bug_Filing_Policy.mw
@@ -1,4 +1,4 @@
-== A guide to filing bug reports on software (for users from an engineer) ==
+A guide to filing bug reports on software (for users from an engineer)
 
 == Less is more in a bug report (engineers are lazy) ==
 * What is your issue (what do you do, how does it fail)?
