/* Too general category names */ Add a subsection outlining issues within Category:ideas

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -161,6 +161,16 @@ These end up in mixed content. They could be removed and content migrated to mor
 
 (1) We've moved Openmoko Inc related info from Openmoko to a new Openmoko Inc category. This was the original aim of the Openmoko category when it was created.
 
+===The Category:ideas===
+Problem 1:
+Many pages have   Wishlist:   in the title. This syntax is potentially confusing because there is no Wishlist:  namespace. Should we suggest a mass rename from "Wishlist:(.*)" to "Ideas - \1" ? Or really create a  Wishlist:  namespace for vaporware ?
+
+Problem 2:
+A significant minority of pages in the "Category:ideas" are missing the prefix in the title.
+
+Problem 3:
+There are two templates, { { Wishlist } } and { { Unimplemented } } . Is that unnecessary redundancy, or is there a subtle distinction .
+
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
