--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -191,10 +191,9 @@ The name of this wiki is currently "Openmoko". I think it should be "Openmoko Wi
 * The other parts of this site (Planet, Projects, Docs) have similar names
 * Media Wiki automatically creates a [http://www.mediawiki.org/wiki/Manual:Namespace namespace] for the Sitename (currently "Openmoko"). This means that content of pages beginning with "Openmoko:" cannot be found through the normal search function of this wiki. (At the moment there are six pages of this kind: [[Openmoko:About]], [[Openmoko:Community Portal]], [[Openmoko:Current events]], [[Openmoko:Searching]], [[Openmoko:Current events/it]], [[Openmoko:Privacy policy]])--[[User:Marko Knöbl|Marko Knöbl]] 18:33, 8 August 2008 (UTC)
 
-'''Yes votes''': [[User:Marko Knöbl|Marko Knöbl]]
+'''Yes votes''': [[User:Marko Knöbl|Marko Knöbl]], [[User:MinhHaDuong|Minh]]
 
 '''No votes''':
-
 
 == Organize translations ==
 
