--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -1,4 +1,7 @@
 __NOTOC__
+
+{{todo|Add these articles into corresponding categories, in order to replace this page, with a dynamic category-based one}}
+
 ==Introduction Of Openmoko==
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
