*Empty MediaWiki Message*

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -71,6 +71,13 @@ Note that map packing eats lots of memory and fails easily on NEO.
 === Share Maps ===
 To share maps for other Neo users to install, see directions on how to * [[CommunityRepository#How_to_release_packages | Add a package to Openmoko Repository]]
 
+== Turn on logging ==
+For now, nmea logging is off by default. To get nmea log for being used, we can send dbus message after om-locations launched as below:
+<pre>
+dbus-send --session --dest=org.openmoko.Diversity --type=method_call --print-reply /org/openmoko/Diversity/objects/0/equipments/nmea org.openmoko.Diversity.Equipment.SetConfig string:log variant:string:/home/root/nmealog
+</pre>
+Then the log will be saved to /home/root/nmealog in this example.
+
 == Install Maps ==
 To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer].
 
