/* Regolare il Volume */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -132,7 +132,7 @@ Alternativamente, si può saltare ad un'altra applicazione, cliccando sul menu d
 
 Nel momento in cui scriviamo, non esiste modo di regolare il volume dallo schermo.
 
-Per ora dovete lanciare il Terminale o [[Getting_Started_with_your_Neo_FreeRunner#Connect_to_the_Neo_FreeRunner_By_USB_Networking|log in via usb]], e avviare l'applicazione [[alsamixer]]. Il mixer è più semplice di quel che sembra. Basta muoversi con i tasti direzionali destra e sinistra per selezionare "headphone" (cuffie) o "PCM", ed utilizzare i tasti direzionali su e giu per regolare il volume. Si può anche regolare il microfono con la regolazione di "mic2". Premere poi ESC quando finito. A questo punto chiudere il Terminale o fare logout dal login USB.
+Per ora dovete lanciare il Terminale o [[Getting_Started_with_your_Neo_FreeRunner#Connect_to_the_Neo_FreeRunner_By_USB_Networking|log in via usb]], e avviare l'applicazione [[Neo_alsamixer|alsamixer]]. Il mixer è più semplice di quel che sembra. Basta muoversi con i tasti direzionali destra e sinistra per selezionare "headphone" (cuffie) o "PCM", ed utilizzare i tasti direzionali su e giu per regolare il volume. Si può anche regolare il microfono con la regolazione di "mic2". Premere poi ESC quando finito. A questo punto chiudere il Terminale o fare logout dal login USB.
 
 Dovrai aggiornare i file di configurazione in /usr/share/openmoko/scenarios/ per rendere le regolazione del microfono permanenti. Per fare ciò, usa
  alsactl -f ''path-to-statefile'' store
