/* Turn on logging */

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -76,7 +76,11 @@ For now, nmea logging is off by default. To get nmea log for being used, we can 
 <pre>
 dbus-send --session --dest=org.openmoko.Diversity --type=method_call --print-reply /org/openmoko/Diversity/objects/0/equipments/nmea org.openmoko.Diversity.Equipment.SetConfig string:log variant:string:/home/root/nmealog
 </pre>
-Then the log will be saved to /home/root/nmealog in this example.
+Then the log will be saved to /home/root/nmealog in this example. 
+
+After om-locations terminated, logging will stop.
+
+The size of log file will increase soon. For now be warned, if the dbus message was sent again, then the log will be overrridden. So backup first before doing that.
 
 == Install Maps ==
 To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer].
