--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -15,6 +15,8 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 </tr>
 <tr valign="top" style="background:#333333">
 <td>
+* 28/8: Trolltech [http://n2.nabble.com/qtopia-4.3.2-release-tp789148p789148.html lanza] Qtopia 4.3.2.
+* 26/8: Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html actuailza] la distribución [[Om 2008.8]].
 * 15/8: Debian en FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html comunicado], [http://wiki.debian.org/DebianOnFreeRunner instrucciones].
 * 8/8: Lanzamiento oficial de [[Openmoko2008.8]] [http://lists.openmoko.org/pipermail/community/2008-August/024715.html]
 * 4-5/8: Openmoko esta en el Linuxworld, San Francisco .[http://www.youtube.com/watch?v=jWJjNF36DfI Video].
