--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1245,6 +1245,9 @@ Without an easily accessible higher storage SD Card slot, many users will soon b
 
 : My thoughts exactly.  Two slots: 1 internal microSD for our storage, and a second external one for more immediate expansion.  My thoughts are more towards hardware expansion.  For example, some of us could put in a second wifi card that does have promiscuous mode.  External VGA connections, etc would also be possible.  The external slot should be chosen by availability of hardware expansions as well as memory availability/price.  --[[User:lally|Lally]] 13:01 12 May 2008 (EST)
 
+=== Thermometer / thermoprobe ===
+There could be a thermoprobe attached to the backcase of FR. Using this you will know what is the temperature of the air or any surface FR will touch. It will be very to check temperature of forehead in case of flu :)
+
 === IR port ===
 Remote control applications
 
