/* Configure the kernel for support */

--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -37,6 +37,7 @@ For a 2.6.25 kernel:
 ***Journalling Flash File System v2 (JFFS2) support
 ****Advanced compression for JFFS2
 *****JFFS2 ZLIB compression support
+*****JFFS2 RTIME compressoin support
 
 ==== Mount on loopback device ====
 
