*Empty MediaWiki Message*

--- a/Translation.mw
+++ b/Translation.mw
@@ -35,6 +35,10 @@ Languages already offered on our community mailinglist, please add your name you
 == Bulgarian == 
 * [[User:Mr700|Doncho Nicolaev Gunchev]]
 
+== Basque ==
+
+* [[User:garrop|Ugartemendia]]
+
 == Catalan ==
 
 * [[User:montxovs|Montxo Vicente i Sempere]]
