/* Turn on logging */

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -80,7 +80,7 @@ Then the log will be saved to /home/root/nmealog in this example.
 
 After om-locations terminated, logging will stop.
 
-The size of log file will increase soon. For now be warned, if the dbus message was sent again, then the log will be overrridden. So backup first before doing that.
+The size of log file will increase soon. For now be warned, if the dbus message was sent again, then the log will be overrridden. So backup or do some hacking first before doing that.
 
 == Install Maps ==
 To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer].
