--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -5,7 +5,7 @@ The [[Stable Hybrid Release]] (SHR) is intended to be a combination of the [[Ope
 
 (We're not married to the idea of using the GTK apps, but they already exist and are more-or-less debugged at least on the UI side.  If someone knows of a more stable and/or usable app that's appropriate for the OM, let us know by dropping a comment on the Talk tab of this page.)
 
-Follow the project here: [http://shr.projects.openmoko.org/ SHR Project Homepage]
+Follow the project here: [http://projects.openmoko.org/projects/shr SHR Project Homepage]
 
 == Why SHR exists ==
 This is long and rambling, and maybe more of a tirade than information, but it does give some background on why this project was started.  The overview gives, well, the overview, this is more of a deeper examination of the existing releases and why we felt we needed something new.
