/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3055,12 +3055,14 @@ How to take:
 | colspan="3"| number of items
 |@
 |remit
+|delivered
 |-
 |
 | FreeRunner
 | Dboard
 | Spares Pack
 | 
+|
 | 
 |-
 | 1. Mac Lin(mkl23@)
@@ -3069,12 +3071,14 @@ How to take:
 | 0
 | HsinChu
 | ---
+| ---
 |-
 | 2. Siongui(siongui@)
 | 3
 | 0
 | 0
 |Taipei
+|yes
 |yes
 |-
 | 3. Scott Wang (scott_wang@)
@@ -3084,18 +3088,21 @@ How to take:
 |HsinChu
 |yes
 |-
+|
 | 4. BlueT - Matthew Lien (bluetraveler@)
 | 1
 | 1
 | 0
 |TaiChung
 |yes
+|
 |-
 | 5. Allan Yang (allan.yang@)
 | 1
 | 1
 | 0
 |Taipei
+|yes
 |yes
 |-
 | 6. Ping Yeh (ping.nsr.yeh@)
@@ -3104,6 +3111,7 @@ How to take:
 | 0
 | Taipei
 | yes
+|
 |-
 | 7. YiKai Lin (yikai.1982@)
 | 1
@@ -3111,12 +3119,14 @@ How to take:
 | 0
 | Taipei
 | yes
+|yes
 |-
 | 8. Tony Chiu (tony.blc@)
 | 1
 | 0
 | 0
 | Taipei or HsinChu
+| yes
 | yes
 |-
 | 9. Terry Lin(terry_lin@)
@@ -3125,6 +3135,7 @@ How to take:
 | 0
 | HsinChu
 | yes
+|yes
 |-
 |Total number:
 | 11
