--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -126,6 +126,10 @@ It would be useful to be able to capture short audio comments, especially when c
 
 There is another common situtaion where people use a laser rangefinder in conjunction with GPS, to get the location of an object that is not reachable (for example a boat) or a tree trunk (under heavy canopy).
 
+==== Communication with camera ====
+
+Since Neo doesn't have internal camera and because any internal camera could not be so quality as hi-end reflex cameras, it would be great if there will be an application wich access camera connected to UBS port as mass storage device, reads list of photos with their acquiring times from EXIF information, compare this times with GPS log and sets photo acquiring position back to EXIF information. All of this on field, with a "single click" and without any other device than Neo. ''Is there any other communication protocol between cameras and GPS devices?''
+
 == External links ==
 
 GPSd http://gpsd.berlios.de/
