--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -63,9 +63,11 @@ In addition to routing issues, to be practical, DNS will need to work.  In some 
 
 == Configure Default Neo DNS ==
 
-DNS is configured in /etc/resolv.conf on your FreeRunner.  You can add your local computer as a DNS:
- echo nameserver 192.168.0.200 > /etc/resolv.conf
-Some Linux and Windows systems have DNS servers, especially those configured as servers, but in general they do not.  You can install packages such as ''bind9'' or ''dnsmasq'' to run your own DNS server. 
+DNS is configured in /etc/resolv.conf on your FreeRunner. 
+
+You should add the IP address of the DNS servers as provided by your ISP. Check your router's or PC's network status for the nameserver IP addresses.
+
+ echo nameserver xxx.xxx.xxx.xxx > /etc/resolv.conf
 
 You can also add the public DNS server called openDNS:
  echo nameserver 208.67.222.222 > /etc/resolv.conf
