/* Formatting the SD card */ Fix template.

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -143,9 +143,7 @@ on another shell and try again.
 Just issue the following command to create at FAT filesystem:
 
  mkfs.vfat /dev/mmcblk0p1
-
-
-{{Note|if you do not have mkfs.vfat you must find and install the "dosfstools" package. This package does not seem to be in the official feeds, but an unofficial build may be downloaded from http://members.shaw.ca/mmontour/neo/dosfstools_2.11-r0_armv4t.ipk}
+{{Note|if you do not have mkfs.vfat you must find and install the "dosfstools" package. This package does not seem to be in the official feeds, but an unofficial build may be downloaded from http://members.shaw.ca/mmontour/neo/dosfstools_2.11-r0_armv4t.ipk}}
 
 
 The second partition is about to be formatted with ext3 (for ext2 to work you need to make sure you compiled the kernel with the correct configuration):
