/* Officials members of the Openmoko Team */

--- a/Who_is_Who.mw
+++ b/Who_is_Who.mw
@@ -68,7 +68,7 @@ The Openmoko team (alphabetical by last name):
 |-
 | Wolfgang Spraul || ''wolfgang'' at openmoko dot ''com'' || || || Vice President of Engineering
 |-
-| Joachim Steiger || || {{user|Roh}} || roh || Central Services
+| Joachim Steiger || ''roh'' at openmoko dot ''org'' || {{user|Roh}} || roh || Central Services
 |-
 | Harry Tsai || ''harry'' at openmoko dot ''com'' || || || Vice President of Sales
 |-
