/* Installation */ Replaced incomplete install insrtucions with links to detail articles.

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -50,13 +50,7 @@ For more details, see the [[Om 2008.8 Guide]] and the [[Om2008.8 Feature Plan|Om
 
 == Installation ==
 
-To install the Om2008.8 "stable" distribution on the Neo FreeRunner:
-* As explained in the [[Downloads#Om_2008.8_.22stable.22_images_.28a.k.a_ASU.29|Downloads]] page, download the Root Filesystem and the Kernel image files from the [http://downloads.openmoko.org/releases/Om2008.8-update/ stable release].
-* Download and install the [[dfu-util]] software for your architecture (32 bits or 64 bits, linux, mac or else...).
-* It's [[Pre-Flash_Backup|backup]] time !
-* Using dfu-util, [[Flashing the Neo FreeRunner|flash]] the two images in the appropriate partitions of the Neo FreeRunner. Alternatively, you may test the distribution by installing it on the microSD card and [[Booting from SD | boot from microSD card]].
-* Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf (see below). For security, you may want to set a root password, add a non-root user and transfer ~/.ssh/authorized_keys and so on.
-* Reinstall your favorite applications.
+To install the Om2008.8 stable distribution on the Neo FreeRunner, download the Root Filesystem and the Kernel image files from [[Download]] page and install according to [[Flashing the Neo FreeRunner]]. Note that flashing the smartphone will overwrite all your existing data and software.
 
 == Known Issues ==
 
