*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Warsaw.mw
+++ b/Openmoko_Local_Groups:_Warsaw.mw
@@ -27,6 +27,11 @@ Witajcie na warszawskiej stronie projektu Openmoko!
 | Brak
 | [[QEMU]], [[gsmd]], ew. [[kernel]].
 | Mam sam telefon GTA01 phase 1 z marca 2007, czarny, i GTA02 z grudnia 2007, rowniez czarny + WiFi 2.0 + zapasowa WiFi 1.3 + debug board v2.
+|-
+| [[User:Kamillo|Kamil Frankiewicz]]
+| Linux, C, Python, asm, nieobcy mi hardware
+| zwiększenie użyteczności urządzonka
+| GTA02 + debug board
 |}
 
 
